# thread-reconstruction

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  results.csv  results_real.csv  work_log.md
data/: README.md
data/real/: camera_calibration.yaml  camera_calibration_sarah.yaml
data/simulated/: blend_calibration.yaml  blend_calibration_new.yaml  get_gt.py
data/simulated/blend1/: blend1_1.npy  blend1_2.npy  blend1_3.npy  blend1_4.npy  left1.npy  right1.npy
data/simulated/blend10/: blend10_1.npy  blend10_2.npy  blend10_3.npy  blend10_4.npy
data/simulated/blend2/: blend2_1.npy  blend2_2.npy  blend2_3.npy  blend2_4.npy
data/simulated/blend3/: blend3_1.npy  blend3_2.npy  blend3_3.npy  blend3_4.npy
data/simulated/blend4/: blend4_1.npy  blend4_2.npy  blend4_3.npy  blend4_4.npy
data/simulated/blend5/: blend5_1.npy  blend5_2.npy  blend5_3.npy  blend5_4.npy
data/simulated/blend6/: blend6_1.npy  blend6_2.npy  blend6_3.npy  blend6_4.npy
data/simulated/blend7/: blend7_1.npy  blend7_2.npy  (+2 more)
launch/: thread_reconstr.launch
src/: curve_fit.py  curve_fit2.py  curve_fit3.py  curve_fit_old2.py  exec_grasp_node.py  fit_eval.py  keypt_ordering.py  keypt_selection.py  main.py  matching_with_curves.py  optim.py  pixel_ordering.py  prob_cloud.py  record_psm_path_node.py  reparam.py  segmentation.py  segmenter.py  stereo_matching.py  thread_reconstr_node.py  unet.py  utils.py
src/Bo_Lu/: get_starts.py  pixel_ordering.py  ssp_reconstruction.py
src/Jackson/: j_reconstruction.py
src/SAM/: sam_segmentation.py
srv/: GetGraspPoint.srv  Grasp.srv  RecordPSMPath.srv  TraceThread.srv
(+8 files in other folders)
